--- a/_config.yml
+++ b/_config.yml
@@ -1,27 +1,20 @@
 ### your site title here
 
-title: Your Name
-description: subtitle | affiliations | motto
+title: Gears of Gordon
+description: Personal site of Gordon Geringas
 
-baseurl: /gradfolio #name of GitHub repository
-url: "" #custom url to be used instead of GitHub repository
-email: #
+baseurl: /gearsofgordon #name of GitHub repository
+url: https://gearsofgordon.com #custom url to be used instead of GitHub repository
+email: ggu9d2hlo@mozmail.com
 
 # Pagination
-paginate: 4
+paginate: 2
 permalink: /blog/:year/:title/
 paginate_path: /blog/page:num/
 
 # Social media links in footer
-twitter: "#"
-linkedin: "#"
-stackoverflow: "#"
-github: "#"
-researchgate: "#"
-orcid: "#"
-quora: "#"
-instagram: "#"
-facebook: "#"
+linkedin: https://linkedin.com/in/gordongeringas
+github: https://github.com/GordonOps
 
 
 # Markdown
