--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 title: Gears of Gordon
 description: Cloud Engineering | Gender Equity | Youth Sport
 
-baseurl: /gearsofgordon #name of GitHub repository
+baseurl: /gearsofgordon/ #name of GitHub repository
 url: https://gearsofgordon.com #custom url to be used instead of GitHub repository
 email: ggu9d2hlo@mozmail.com
 
@@ -43,12 +43,9 @@ collections:
     output: true
     permalink: /projects/:name/
     order:
-      - shortProject.md
-      - longerProjectTitle.md
-      - redirect.md
-      - project4.md
-      - project5.md
-      - project6.md
+      - gearsofgordon.md
+      - fencinghubacademy.md
+      - weddingbook.md
 
 sass:
   sass_dir: /assets/css/_sass
