--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ permalink: /blog/:year/:title/
 paginate_path: /blog/page:num/
 
 # Social media links in footer
-linkedin: https://linkedin.com/in/gordongeringas
-github: https://github.com/GordonOps
+linkedin: gordongeringas
+github: GordonOps
 
 #build site filename
 destination: public
