--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: ruby
 rvm:
-  - 2.7
+  - 2.3.0
 before_script:
-- gem install bundler
+- gem install bundler -v 2.3.22
 - pip install --user awscli
 - rm -rf public
 - bundle exec jekyll build
